<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_refresh"
        android:showAsAction="always"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        android:showAsAction="always"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_unconnect"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_unconnect"
        android:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->

</menu>