<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.isen.vmrs.MainActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:text="@string/str_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="******"
        android:layout_above="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/str_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textPw"
        android:layout_above="@+id/password"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/mail"
        android:hint="example@mail.com"
        android:layout_above="@+id/textPw"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textMail"
        android:text="@string/str_mail"
        android:layout_above="@+id/mail"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_height="wrap_content"
        android:src="@drawable/logo_vmrs"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:minHeight="140dp"
        android:adjustViewBounds="false"
        android:layout_marginBottom="96dp"
        android:layout_above="@+id/textMail"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/str_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/siteText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
